--- a/templates/home.html.hbs
+++ b/templates/home.html.hbs
@@ -1,5 +1,5 @@
 {{#*inline "page"}}
   <p>This is home - home.html.hbs</p>
-  <img src="files/hillary.jpg" alt="hillary" />
+  <img src="http://localhost:9555/files/hillary.jpg" alt="hillary" />
 {{/inline}}
 {{> layout }}
